# Dealer3

./: .clinerules  .gitignore  CLAUDE.md  Cargo.toml  DEALER_FUNCTIONALITY.md  FILTER_LANGUAGE_STATUS.md  README.md  generate-test-data.sh  performance-pretest-2026-01-07.md  run-dealer.sh  setup-windows-ssh.ps1  test-windows-ssh.sh
bridge-solver/: Cargo.toml  SOLVER_TESTING.md
bridge-solver/examples/: debug_bug.rs  debug_deal.rs  debug_fast.rs  debug_fast2.rs  debug_fast3.rs  debug_solver2.rs  endgame_compare.rs  exhaustive.rs  quick_test.rs  quick_test_10.rs  quick_test_11.rs  quick_test_12.rs  quick_test_13.rs  quick_test_9.rs  show_play.rs  show_play_tt.rs  solver_rust.rs  solver_v2.rs  test_3card.rs  test_deal2.rs  test_endgame.rs  test_fail.rs  test_follow_order.rs  test_lead_order.rs  test_lead_order_report.rs  test_lib_perf.rs  test_scaling.rs  test_slow_trump_tricks.rs  test_tt.rs  test_v2.rs  trace_play.rs  trace_solver2.rs
bridge-solver/examples/xray/: CALL_HIERARCHY.md  compare.py
bridge-solver/examples/xray/deals/: quick_test_10.txt  quick_test_12.txt  quick_test_2.txt  quick_test_3.txt  quick_test_8.txt
bridge-solver/src/: bridge_solver.rs  cache.rs  cards.rs  hands.rs  lib.rs  pattern.rs  play.rs  search.rs  tests.rs  types.rs
bridge-solver/xray/: README.md  compare.py
bridge-solver/xray/deals/: quick_test_1.txt  quick_test_11.txt  quick_test_13.txt  quick_test_4.txt  quick_test_4_black_swap.txt  quick_test_5.txt  quick_test_6.txt  quick_test_7.txt  quick_test_9.txt
dealer/: Cargo.toml
dealer-core/: Cargo.toml  README.md
dealer-dds/: Cargo.toml  README.md
dealer-eval/: Cargo.toml
dealer-parser/: Cargo.toml  PARSER_FEATURES.md  README.md  TODO.md
dealer-pbn/: Cargo.toml
dealer-test/: Cargo.toml
dealer/src/: deal_validator.rs  fast_parallel.rs  main.rs  parallel.rs
docs/: BUILDING_WINDOWS.md  CHANGELOG.md  CLI_DESIGN.md  DEPRECATED_SWITCHES.md  FILTER_LANGUAGE_STATUS.md  MULTITHREADING_DESIGN.md  PBN_file_format_specification.txt  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PHASE_0_COMPLETION.md  WINDOWS_BUILD_SUMMARY.md  WINDOWS_SSH_SETUP.md  command_line_comparison.md  dealer_vs_dealer2_switches.md  (+4 more)
(+47 files in other folders)
