[package]
name = "bridge-solver"
version = "0.2.0"
edition = "2021"
license = "Unlicense"
description = "Bridge Double-Dummy Solver - Port of macroxue/bridge-solver"

[features]
debug_mtdf = []
debug_fast = []
debug_search = []
no_tricks_pruning = []
no_fast_tricks = []
no_slow_tricks = []

[dependencies]
