[package]
name = "bridge-solver"
version = "0.4.0"
edition = "2021"
license = "Unlicense"
description = "Bridge Double-Dummy Solver - Port of macroxue/bridge-solver"

[features]
debug_mtdf = []
debug_fast = []
debug_search = []
no_tricks_pruning = []
no_fast_tricks = []
no_slow_tricks = []

[[bin]]
name = "solver-diag"
path = "src/bin/solver-diag/main.rs"

[[bin]]
name = "solver"
path = "src/bin/bridge-solver/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
