[package]
name = "dealer"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[dependencies]
dealer-core = { path = "../dealer-core" }
dealer-parser = { path = "../dealer-parser" }
dealer-eval = { path = "../dealer-eval" }
dealer-pbn = { path = "../dealer-pbn" }
clap = { version = "4.5", features = ["derive"] }
