[package]
name = "dealer"
version = "0.4.0"
edition = "2021"
license = "Unlicense"

[dependencies]
dealer-core = { path = "../dealer-core" }
dealer-parser = { path = "../dealer-parser" }
dealer-eval = { path = "../dealer-eval" }
dealer-pbn = { path = "../dealer-pbn" }
bridge-encodings = { path = "../../bridge-encodings" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"

[[bin]]
name = "dealer"
path = "src/main.rs"

[[bin]]
name = "deal-validator"
path = "src/deal_validator.rs"
